# neageoflymapper

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  coords.py  core.py  core_legacy.py  kmlgenerator.py  main.py  metainfos.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  start.bat
.github/workflows/: build.yaml  ci.yml  release.yml
doc/: credits.md  development.md  usage.md
src/: cli_args.py  coords.py  core.py  index.html  kmlgenerator.py  main.py  metainfos.py  webserver.py
tests/: test_coords.py  test_core.py  test_kmlgenerator.py  test_main.py
