[project]
name = "nea-geofly-mapper"
version = "0.1.7"
description = "Download and stitch map tiles to a single photo from https://nea.geofly.eu/"
authors = [
    { name = "fabyr" },
    { name = "Wonno" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "fastkml>=1.4.0,<2.0.0",
    "lxml>=6.0.2,<7.0.0",
    "requests>=2.33.0,<3.0.0",
    "rich>=14.3.3,<15.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pyproj>=3.7.2,<4.0.0",
    "pygeoif>=1.6.0,<2.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest-github-report (>=0.0.1,<0.0.2)",
]

build = [
    "pyinstaller (>=6.19.0,<7.0.0)",
]

[tool.poetry]
package-mode = true
requires-poetry = ">=2.0,<3.0"
packages = [
    { include = "*.py", from = "src" },
]

[tool.poetry-pyinstaller-plugin]
console = true

[tool.poetry-pyinstaller-plugin.targets.nea-geofly-mapper]
source = "src/main.py"
type = "onefile"
include = { "pyproject.toml" = "." }

[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = { version = ">=2.0.0,<3.0.0", extras = ["plugin"] }

[tool.poetry.group.build]
optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-cov=src"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.pylint.main]
ignore = [".git", "__pycache__", "dist", "build", ".venv"]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 5

[tool.pylint.typecheck]
ignored-modules = [
    "importlib.metadata"
]

